--- a/index.css
+++ b/index.css
@@ -1,15 +1,34 @@
 /* Geral */
 body{
-  margin: 0;
+  margin: auto;
   padding-bottom: 50px;
-  padding-top: 50px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 12.5%;
+  padding-right: 12.5%;
 }
 
 @font-face {
   font-family: Jonathan;
-  src: url('fonts/Jonathan.ttf');
+  src: url('fonts/Jonathan/Jonathan.ttf');
+}
+
+@font-face {
+  font-family: Cardo;
+  src: url('fonts/Cardo/Cardo-Regular.ttf');
+}
+
+.text{
+  font-family: Cardo;
+  color: #A1C19C;
+  font-size: 20px;
+  text-align: justify;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.title{
+  font-family: Cardo;
+  color: #D17A84;
+  font-size: 25px;
 }
 
 /* Menu */
@@ -25,15 +44,22 @@ body{
   text-align: center;
 }
 .home{
-  font-size: 100px;
+  font-size: 120px;
   font-family: Jonathan;
+  color: #942c35;
+}
+.home:hover{
+  color: #A1C19C;
+  cursor: pointer;
 }
 .item-menu{
-  color: #db4844;
+  color: #942c35;
   padding: 10px;
+  font-family: Cardo;
+  font-weight: bold;
 }
 .item-menu:hover{
-  color: aqua;
+  color: #A1C19C;
   cursor: pointer;
 }
 
@@ -46,8 +72,11 @@ body{
   text-align: center;
 }
 #days, #hours, #minutes, #seconds {
-  font-size: 50px;
+  font-size: 90px;
   color: white;
+  font-family: Jonathan;
+  padding: 0;
+  margin: 0;
 }
 
 .grid-container-timer {
@@ -61,14 +90,19 @@ body{
 
 .grid-item-timer {
   margin: 10px;
-  background-color: red;
-  padding: 10px;
-  font-size: 25px;
+  background-color: #D17A84;
   text-align: center;
   border-radius: 15px;
   width: 190px;
 }
 
+.grid-item-timer>label {
+  font-size: 50px;
+  color: white;
+  font-family: Jonathan;
+  padding: 0;
+  margin: 0;
+}
 .imagem_slides{
   background-repeat: no-repeat;
   background-position: center;
@@ -82,6 +116,20 @@ body{
 /* Local */ 
 #local{
   display:none
+}
+
+.center{
+  display: block;
+  text-align: center;
+}
+
+#rita{
+  background-image: url('imagens/rita.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+  height: 500px;
 }
 .mapouter{
   position:relative;
@@ -107,7 +155,7 @@ body{
 }
 .iframe{
   width: 80%;
-  height: 1000px;
+  height: 1500px;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -143,6 +191,8 @@ body{
   text-align: center;
   border-radius: 15px;
   width: 190px;
+  color: #A1C19C;
+  font-family: Cardo;
 }
 
 .grid-item-indicacao>img {
