--- a/index.css
+++ b/index.css
@@ -2,8 +2,20 @@
 body{
   margin: auto;
   padding-bottom: 50px;
-  padding-left: 12.5%;
-  padding-right: 12.5%;
+}
+
+@media (max-width: 500px) {
+  body{
+    padding-left: 12.5%;
+    padding-right: 12.5%;
+  }
+}
+
+@media (min-width: 500px) {
+  body{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
 
 @font-face {
@@ -16,10 +28,29 @@ body{
   src: url('fonts/Cardo/Cardo-Regular.ttf');
 }
 
+@media (max-width: 500px) {
+  .text{
+    font-size: 15px;
+  }
+
+  .title{
+    font-size: 25px;
+  }
+}
+
+@media (min-width: 500px) {
+  .text{
+    font-size: 25px;
+  }
+
+  .title{
+    font-size: 30px;
+  }
+}
+
 .text{
   font-family: Cardo;
   color: #A1C19C;
-  font-size: 20px;
   text-align: justify;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -28,25 +59,33 @@ body{
 .title{
   font-family: Cardo;
   color: #D17A84;
-  font-size: 25px;
 }
 
 /* Menu */
-.grid-container-menu {
-  display: grid;
-  grid-template-columns: 30% 60% 10%;
-  align-items:center;
-}
-.grid-item-menu {
-  background-color: rgba(255, 255, 255, 0.8);
-  font-size: 18px;
-  text-align: center;
-}
 .home{
-  font-size: 90px;
   font-family: Jonathan;
   color: #942c35;
 }
+
+.grid-item-menu {
+  text-align: center;
+}
+
+@media (max-width: 500px) {
+  .home{
+    font-size: 75px;
+    margin: 0;
+  }
+  .grid-container-menu {
+    grid-template-columns: auto;
+  }
+}
+
+.grid-container-menu {
+  display: grid;
+  align-items:center;
+}
+
 .home:hover{
   color: #A1C19C;
   cursor: pointer;
@@ -62,6 +101,10 @@ body{
   cursor: pointer;
 }
 
+.grid-item-menu {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
 .fa-play, .fa-pause, .fa-volume-mute, .fa-volume-up{
   color: #942c35;
 }
@@ -69,20 +112,72 @@ body{
   color: #A1C19C;
 }
 
+@media (min-width: 500px) {
+  .grid-container-menu {
+    grid-template-columns: 30% 15% 15% 15% 15% 10%;
+  }
+
+  .grid-item-menu {
+    font-size: 16px;
+  }
+  
+  .home{
+    font-size: 90px;
+  }
+  .item-menu{
+    padding: 10px;
+  }
+}
 
 /* Inicial */
-#casal{
-  width: 50%;
+@media (min-width: 500px) {
+  #casal{
+    width: 50%;
+  }
+
+  .grid-item-timer {
+    margin: 10px;
+    width: 190px;
+  }
+
+  .grid-item-timer>label {
+    font-size: 50px;
+  }
+
+  #days, #hours, #minutes, #seconds {
+    font-size: 90px;
+  }
 }
+
+@media (max-width: 500px) {
+  #casal{
+    width: 100%;
+  }
+
+  .grid-item-timer {
+    margin: 10px;
+    width: 50px;
+  }
+
+  .grid-item-timer>label {
+    font-size: 20px;
+  }
+
+  #days, #hours, #minutes, #seconds {
+    font-size: 40px;
+  }
+}
+
 .img_inicial{
   text-align: center;
 }
+
 #days, #hours, #minutes, #seconds {
-  font-size: 90px;
   color: white;
   font-family: Jonathan;
   padding: 0;
   margin: 0;
+  height: 20px;
 }
 
 .grid-container-timer {
@@ -95,15 +190,12 @@ body{
 }
 
 .grid-item-timer {
-  margin: 10px;
   background-color: #D17A84;
   text-align: center;
   border-radius: 15px;
-  width: 190px;
 }
 
 .grid-item-timer>label {
-  font-size: 50px;
   color: white;
   font-family: Jonathan;
   padding: 0;
@@ -115,7 +207,6 @@ body{
   background-size: contain;
   width: 100%;
   height: 500px;
-  background-color: rgb(203, 203, 203);
 }
 
 
@@ -136,6 +227,21 @@ body{
   background-size: contain;
   width: 100%;
   height: 500px;
+}
+
+@media (max-width: 500px) {
+  #rita{
+    height: 200px;
+  }
+  .mapouter{
+    height:200px;
+  }
+  .gmap_canvas {
+    height:200px;
+  }
+  .gmap_iframe {
+    height:200px!important;
+  }
 }
 .mapouter{
   position:relative;
@@ -179,13 +285,31 @@ body{
   justify-content: center;
 }
 
+@media (max-width: 500px) {
+  #confirmaçao_presenca>.iframe{
+    width: 100%;
+  }
+}
+
 /* Indicação dos noivos */ 
 #indicacao_noivos{
   display:none
 }
+
+@media (max-width: 500px) {
+  .grid-container-indicacao {
+    grid-template-columns: auto;
+  }
+}
+
+@media (min-width: 500px) {
+  .grid-container-indicacao {
+    grid-template-columns: auto auto auto;
+  }
+}
+
 .grid-container-indicacao {
   display: grid;
-  grid-template-columns: auto auto auto;
   margin: auto;
   justify-content: center;
   align-items: center;
