--- a/index.css
+++ b/index.css
@@ -4,17 +4,17 @@ body{
   padding-bottom: 50px;
 }
 
-@media (max-width: 500px) {
-  body{
-    padding-left: 12.5%;
-    padding-right: 12.5%;
-  }
-}
-
-@media (min-width: 500px) {
+@media (max-width: 600px) {
   body{
     padding-left: 5%;
     padding-right: 5%;
+  }
+}
+
+@media (min-width: 600px) {
+  body{
+    padding-left: 12.5%;
+    padding-right: 12.5%;
   }
 }
 
@@ -28,7 +28,7 @@ body{
   src: url('fonts/Cardo/Cardo-Regular.ttf');
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .text{
     font-size: 15px;
   }
@@ -38,7 +38,7 @@ body{
   }
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
   .text{
     font-size: 25px;
   }
@@ -71,7 +71,7 @@ body{
   text-align: center;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .home{
     font-size: 75px;
     margin: 0;
@@ -112,7 +112,7 @@ body{
   color: #A1C19C;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
   .grid-container-menu {
     grid-template-columns: 30% 15% 15% 15% 15% 10%;
   }
@@ -130,7 +130,7 @@ body{
 }
 
 /* Inicial */
-@media (min-width: 500px) {
+@media (min-width: 600px) {
   #casal{
     width: 50%;
   }
@@ -149,7 +149,7 @@ body{
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   #casal{
     width: 100%;
   }
@@ -206,7 +206,7 @@ body{
   background-position: center;
   background-size: contain;
   width: 100%;
-  height: 500px;
+  height: 600px;
 }
 
 
@@ -226,10 +226,10 @@ body{
   background-position: center;
   background-size: contain;
   width: 100%;
-  height: 500px;
+  height: 600px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   #rita{
     height: 200px;
   }
@@ -263,11 +263,11 @@ body{
 /* Lista de presentes */ 
 #lista_presentes{
   display:none;
-  height: 1500px;
+  height: 1600px;
 }
 .iframe{
-  width: 80%;
-  height: 1500px;
+  width: 100%;
+  height: 1600px;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -280,12 +280,12 @@ body{
 }
 
 #confirmaçao_presenca>.iframe{
-  height: 1500px;
+  height: 1600px;
   align-items: center;
   justify-content: center;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   #confirmaçao_presenca>.iframe{
     width: 100%;
   }
@@ -296,13 +296,13 @@ body{
   display:none
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .grid-container-indicacao {
     grid-template-columns: auto;
   }
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
   .grid-container-indicacao {
     grid-template-columns: auto auto auto;
   }
@@ -313,6 +313,7 @@ body{
   margin: auto;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .grid-item-indicacao label{
@@ -332,6 +333,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-size:cover;
+  display: inline-block;
 }
 
 /* Footer */ 
