--- a/index.css
+++ b/index.css
@@ -199,14 +199,41 @@ body{
   padding: 0;
   margin: 0;
 }
+
+@media (max-width: 600px) {
+  #carouselExampleIndicators{
+    width: 90%;
+    height: 300px;
+  }
+  .imagem_slides{
+    height: 300px;
+  }
+}
+
+@media (min-width: 600px) {
+  #carouselExampleIndicators{
+    width: 60%;
+    height: 600px
+  }
+  .imagem_slides{
+    height: 600px;
+  }
+}
+
+#carouselExampleIndicators{
+  border-radius: 15px;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+}
+
 .imagem_slides{
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  width: 100%;
-  height: 600px;
   background-color: rgba(128, 128, 128, 0.295);
   border-radius: 15px;
+
 }
 
 
